--- a/app/views/common/_google_analytics.html.erb
+++ b/app/views/common/_google_analytics.html.erb
@@ -1,12 +1,5 @@
-  <script type="text/javascript">
-     var _gaq = _gaq || [];
-       _gaq.push(['_setAccount', 'UA-30889158-1']);
-         _gaq.push(['_trackPageview']);
-
-           (function() {
-                var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
-                    ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
-                        var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
-                          })();
-   </script>j
+<script type="text/javascript">
+var _bdhmProtocol = (("https:" == document.location.protocol) ? " https://" : " http://");
+document.write(unescape("%3Cscript src='" + _bdhmProtocol + "hm.baidu.com/h.js%3F66c3b17dea6bc1e5a62d9abe054563ca' type='text/javascript'%3E%3C/script%3E"));
+</script>
   
