--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,18 +13,21 @@
   <meta name="keywords" content="<%= @meta_keywords %>" />
   <meta name="description" content="<%= @meta_description %>" />
   <meta charset='utf-8' />
-  <link rel="shortcut icon" href="<%= asset_path("big_logo.png") %>" /> 
+  <link rel="shortcut icon" href="<%= asset_path("text_logo.png") %>" /> 
   <%= raw SiteConfig.custom_head_html %>
   <%= csrf_meta_tag %>
   <%= auto_discovery_link_tag(:rss,feed_topics_url,:title => '订阅最新帖') %>
   <%= yield :node_feed_link %>
+  <!--[if IE 6]>
+<%= stylesheet_link_tag "ie6.min" %>
+<![endif]-->
 </head>
 <body data-offset="50">
   <div class="navbar navbar-fixed-top">
     <div class="navbar-inner">
       <div class="container">
         <h3>
-          <a href="/"><%= image_tag("text_logo.png") %></a>
+          <a href="/"><%= image_tag("text_logo.png", :size =>"40*40") %></a>
         </h3>
         <%= render_list :class => "nav" do |li|
            li << link_to(t("menu.topics"), topics_path)
