new log and baidu liuliang

--- a/app/views/common/_google_analytics.html.erb
+++ b/app/views/common/_google_analytics.html.erb
@@ -1,6 +1,8 @@
 <script type="text/javascript">
+
 $(function(){if($.browser.msie&&parseInt($.browser.version,10)===6){$('.row div[class^="span"]:last-child').addClass("last-child");$('[class="span"]').addClass("margin-left-20");$(':button[class="btn"], :reset[class="btn"], :submit[class="btn"], input[type="button"]').addClass("button-reset");$(":checkbox").addClass("input-checkbox");$('[class^="icon-"], [class=" icon-"]').addClass("icon-sprite");$(".pagination li:first-child a").addClass("pagination-first-child")}})
     var _gaq = _gaq || [];
+
       _gaq.push(['_setAccount', 'UA-30889158-1']);
         _gaq.push(['_trackPageview']);
 
@@ -9,5 +11,7 @@ $(function(){if($.browser.msie&&parseInt($.browser.version,10)===6){$('.row div[
                    ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
                        var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
                          })();
+var _bdhmProtocol = (("https:" == document.location.protocol) ? " https://" : " http://");
+document.write(unescape("%3Cscript src='" + _bdhmProtocol + "hm.baidu.com/h.js%3F66c3b17dea6bc1e5a62d9abe054563ca' type='text/javascript'%3E%3C/script%3E"));
 </script>
   
