--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -68,6 +68,7 @@
   <% end %>
   <%= yield :scripts %>
   <%= render :partial => "common/google_analytics"%>
-  
+  <a href="http://webscan.360.cn/index/checkwebsite/url/nongyougongshe.com" name="0d3166b396addf76612586aa05039fda" >360网站安全检测平台</a>  
 </body>
+
 </html>
