--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,6 +1,11 @@
 <!DOCTYPE html>
 <html>
 <head>
+<!--[if IE ]>
+<script>location.href="/assets/ie6.html"</script>
+  <![endif]-->
+
+
   <%= render_page_title %>
   <%= stylesheet_link_tag "front" %>
   <%= yield :styles %>
@@ -18,12 +23,9 @@
   <%= csrf_meta_tag %>
   <%= auto_discovery_link_tag(:rss,feed_topics_url,:title => '订阅最新帖') %>
   <%= yield :node_feed_link %>
-  <!--[if IE 6]>
-<%= stylesheet_link_tag "ie6.min" %>
-<![endif]-->
 </head>
-<body data-offset="50">
-  <div class="navbar navbar-fixed-top">
+ <body data-offset="50">
+   <div class="navbar navbar-fixed-top">
     <div class="navbar-inner">
       <div class="container">
         <h3 style="width:70px">
