--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -11,15 +11,39 @@
 html {
   width: 100%;
   height: 100%;
-  background:#eee image-url('bg.png') bottom left repeat;
+background:#eee image-url('bg.png') bottom left repeat;
+  
+}
+.site_map {
+  margin-top: 60px;
+}
+.top {
+  background-image:url("/assets/top.png");
+
+}
+#menu .active {
+  background: #D8DFEA;
+}
+.menu_app li {
+  margin-top: 20px;
+  
 }
 body { background:none;}
 
 code { background:none; }
-
-
+.menu_app {
+  position:fixed;
+  top:40px;
+  left:auto;
+  width:80px;
+  margin: 20px 0px 0px 20px;
+  //background:white;
+}
+.red {
+  color:red;
+}
 .navbar-fixed-top {
-  position:static;right:0;left:0;margin-bottom:20px;
+  position:fixed;right:0;left:0;margin-bottom:20px;
   .badge-inverse { background:#666;}
 
   .search-query {
@@ -111,7 +135,7 @@ a[rel=userpopover] {
   border-top:0;
   min-width: 940px;
   margin-bottom:30px;
-  margin-top:0px;
+  margin-top: 40px;
   padding:0;
   text-shadow: 0 1px 0 #fff;
 }
@@ -119,7 +143,7 @@ a[rel=userpopover] {
   margin:3px 0;
   color: #555;
 }
-#main { position:relative;}
+#main { position:relative;margin-top:20px;}
 #main h1 { font-size:14px; line-height:26px; font-weight:bold; text-align:right; color:#333; margin-bottom:10px; }
 
 .topbar { position: static; margin-bottom:20px;}
