--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-<!--[if IE ]>
+<!--[if IE 6 ]>
 <script>location.href="/assets/ie6.html"</script>
   <![endif]-->
 
@@ -15,6 +15,8 @@
     <meta content='True' name='HandheldFriendly' />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <% end %>
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  
   <meta name="keywords" content="<%= @meta_keywords %>" />
   <meta name="description" content="<%= @meta_description %>" />
   <meta charset='utf-8' />
@@ -22,33 +24,36 @@
   <%= raw SiteConfig.custom_head_html %>
   <%= csrf_meta_tag %>
   <%= auto_discovery_link_tag(:rss,feed_topics_url,:title => '订阅最新帖') %>
-  <%= yield :node_feed_link %>
+   
 </head>
  <body data-offset="50">
    <div class="navbar navbar-fixed-top">
-    <div class="navbar-inner">
+    <div class="navbar-inner top">
       <div class="container">
         <h3 style="width:70px">
           <a href="/"><%= image_tag("text_logo.png", :size =>"70x70") %></a>
         </h3>
-
-        <%= render_list :class => "nav" do |li|
-           li << link_to(t("menu.topics"), topics_path)
-           li << link_to(t("menu.wiki"), pages_path )
-           li << link_to(t("menu.sites"), sites_path )
-           li << link_to(t("menu.users"), users_path)
-        end %>
+       
         <%= render "common/user_nav" %>
       </div>
     </div>
   </div>
-  
+  <% if current_user %>
+  <div id="menu" class="menu_app clearfix">
+      <%= render_list :class => "nav" do |li|
+          li << link_to(t("menu.my_home_page"), user_path(current_user.login))
+          li << link_to(t("menu.topics"), topics_path)
+          li << link_to(t("menu.notes"), notes_path )
+          li << link_to(t("menu.wiki"), pages_path )
+          li << link_to(t("menu.sites"), sites_path )
+          li << link_to(t("menu.users"), users_path)
+        end %>
+  </div>
+  <% end %>
   <div class="container">
-    <div itemscope itemtype="http://data-vocabulary.org/Breadcrumb">
+    <div class="site_map" itemscope itemtype="http://data-vocabulary.org/Breadcrumb">
       <%= render_breadcrumb %>
     </div>
-    <%= render "common/feeds" %>
-
     <%= notice_message %>
     <div id="main" class="container-fluid">
       <%= yield %>
@@ -69,6 +74,9 @@
     <script type="text/javascript">app_mobile = true;</script>
   <% end %>
   <%= yield :scripts %>
+  <!--[if lt IE 9]>
+　　　　<script src="http://css3-mediaqueries-js.googlecode.com/svn/trunk/css3-mediaqueries.js"></script>
+　　<![endif]-->
   <%= render :partial => "common/google_analytics"%>
 </body>
 
