--- a/app/views/passwords/new.html.erb
+++ b/app/views/passwords/new.html.erb
@@ -1,8 +1,17 @@
-
+<% content_for :styles do %>
+ <%= stylesheet_link_tag "account" %>
+<% end %>
+<h1 class="account_logo">
+  找到<span class="red">农业圈</span>的<span class="red">人</span>
+</h1>
+<%= render "shared/error_messages", :target => resource %> 
+<div class="account_center">
 <%= simple_form_for(resource, :as => resource_name, :url => password_path(resource_name), :html => { :method => :post }) do |f| %>
-  <%= render "shared/error_messages", :target => resource %> 
-    <legend>忘记了密码</legend>
+  
     <%= f.input :email, :hint => "此功能将会发送一个找回密码的特别链接到你的邮箱，通过改链接可以进入重置密码的页面。" %>
+</div>
+<div class="account_foot">    
       <%= f.submit "找回密码", :class => "btn btn-primary", :disable_with => t("common.submitting") %>
 <%= render :partial => "devise/shared/links" %>
 <% end %>
+</div>
