fix assets precompile

--- a/app/views/account/new.html.erb
+++ b/app/views/account/new.html.erb
@@ -1,6 +1,4 @@
-<% content_for :styles do %>
- <%= stylesheet_link_tag "account" %>
-<% end %>
+<%= render "base"%>
 <h1 class="account_logo">
   找到<span class="red">农业圈</span>的<span class="red">人</span>
 </h1>
