--- a/app/views/devise/mailer/reset_password_instructions.html.erb
+++ b/app/views/devise/mailer/reset_password_instructions.html.erb
@@ -1,4 +1,4 @@
-<p>你好 <%= @resource.login %>!</p>
+<p>你好 <%= @resource.name %>!</p>
 <p>有人请求找回在 <%= Setting.app_name %> 上面，账号为 <%= @resource.login %> 的密码，如果你是，那么你可以通过下面的连接进入网站修改密码.</p>
 <p style="margin:20px 0;"><%= link_to "修改我的密码", edit_password_url(@resource, :reset_password_token => @resource.reset_password_token) %><p>
 <p>如果看不到连接，请复制下面的连接然后在浏览器里面打开：</p>
